# the_ten_biggest_findings

./: .gitignore  app.py  pyproject.toml
data/: fund.py  quiz.py
pages/: quiz.py
